@@ -18,7 +18,7 @@ typedef struct {
 } SlashIndexes;
 
 static inline bool
-chunk_equals(const SerdChunk* a, const SerdChunk* b)
+slice_equals(const SerdStringView* a, const SerdStringView* b)
 {
   return a->len == b->len && !strncmp(a->buf, b->buf, a->len);
 }
@@ -53,8 +53,8 @@ uri_rooted_index(const SerdURI* uri, const SerdURI* root)
   SlashIndexes indexes = {SIZE_MAX, SIZE_MAX};
 
   if (!root || !root->scheme.len ||
-      !chunk_equals(&root->scheme, &uri->scheme) ||
-      !chunk_equals(&root->authority, &uri->authority)) {
+      !slice_equals(&root->scheme, &uri->scheme) ||
+      !slice_equals(&root->authority, &uri->authority)) {
     return indexes;
   }
 
