@@ -5,6 +5,7 @@ serd (1.1.1) unstable; urgency=medium
   * Remove serd_uri_to_path()
   * Remove support for reading Turtle named inline nodes extension
   * Remove useless character counting from API
+  * Rename SerdChunk to SerdStringView
   * Use char* for strings in public API
 
  -- David Robillard <d@drobilla.net>  Tue, 30 Jan 2024 14:40:49 +0000
